--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rolutu-tires-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://patrickssj222.github.io/rolutu-tires-web",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -28,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "sass": "^1.69.5"
   }
 }
