--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rolutu-tires-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://patrickssj222.github.io/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
