--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rolutu-tires-web",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://patrickssj222.github.io/",
+  "private": false,
+  "homepage": "https://patrickssj222.github.io/rolutu-tires-web/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.2.14",
     "clsx": "^2.0.0",
     "firebase": "^10.5.2",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
@@ -30,8 +31,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
