--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "clsx": "^2.0.0",
     "firebase": "^10.5.2",
     "process": "^0.11.10",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -53,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-lottie": "^1.2.9",
     "gh-pages": "^6.0.0",
     "sass": "^1.69.5"
   }
